--- a/vue/demo7.html
+++ b/vue/demo7.html
@@ -23,7 +23,8 @@
         </el-form-item>
 
         <el-form-item label="活动区域">
-            <el-date-picker v-model="formInline.value7" type="daterange" align="right" placeholder="选择日期范围"  format="yy-MM-dd"  :picker-options="pickerOptions2"/>
+            <el-date-picker v-model="formInline.value7"  type="daterange" align="right"
+                            placeholder="选择日期范围"  format="yyyy-MM-dd"  :picker-options="pickerOptions2"/>
         </el-form-item>
 
         <el-form-item>
@@ -73,7 +74,7 @@ var datts;
         formInline: {
           user: '',
           region: '',
-          value7:''
+          value7:[new Date(), new Date()]
         },
         pickerOptions2: {
           shortcuts: [{
@@ -101,7 +102,7 @@ var datts;
               picker.$emit('pick', [start, end]);
             }
           }]
-        },
+        }
       }
     },
     methods: {
